--- a/scss/_vr-project.scss
+++ b/scss/_vr-project.scss
@@ -3,48 +3,47 @@
   h2 {
     background: rgba(0, 0, 0, 0);
     text-decoration: underline;
+    margin-left:3rem;
   }
-  .project-info {
-    display: grid;
-    grid-gap: 30px;
-    grid-template-columns: repeat(3, 1fr);
-    :nth-child(2){grid-column: 2 / 4;}
-    :nth-child(3){grid-column: 1 / 3;}
-    :nth-child(6){grid-column: 2 / 4;}
-    margin-right: 40px;
-    margin-bottom: 40px;
-    
-    .project-info-img {
-      margin: auto;
-      // // border-radius: 50%;
-      border: $secondary-color 3px solid;
-      img {
-        display: block;
-      }  
-    }
-    
-    .project-info-text {
-      font-size: 1.3rem;
-      padding-right: 1rem;
-      // background: lighten($primary-color,1)
-    }
-
-    .project-info-img-baby-shades {
-      height: 300px;
-      width: 400px;
-    }
-    .project-info-img-blasticus {
-      height: 400px;
-      width: 265px;
-    }
-    
-    .project-info-img-camera{
-      height: 420px;
-      width: 329px;
-    }
-    
-    .imdb-link:hover{
-      text-decoration: underline;
+  .project-info-container {
+    display: flex;
+    margin: 5rem 10vw;
+    .project-info {
+      width: 100%;
+      display: grid;
+      margin-left: 0;
+      grid-gap: 5rem;
+      grid-template-columns: repeat(3, 1fr);
+      :nth-child(2){grid-column: 2 / 4;}
+      :nth-child(3){grid-column: 1 / 3;}
+      :nth-child(6){grid-column: 2 / 4;}
+      
+      .project-info-img {
+        // margin: auto;
+        // // border-radius: 50%;
+        border: $secondary-color 3px solid;
+        img {
+          display: block;
+          max-width: 500px;
+        }  
+      }
+      .project-info-text-container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        .project-info-text {
+          font-size: 1.3rem;
+          padding-right: 1rem;
+          max-height: 100%;
+          // background: lighten($primary-color,1)
+          // width: 30vw;
+          // height: auto;
+          overflow: hidden;
+        }
+      }
+     
     }
   }
+ 
 }
