--- a/scss/main.scss
+++ b/scss/main.scss
@@ -147,7 +147,7 @@ main {
   height: 100vh;
   width: 100vw;
   display: flex;
-  flex-wrap: wrap;
+  // flex-wrap: wrap;
   justify-content: center;
   flex-direction: column;
   background: $light-text-color;
