--- a/css/main.css
+++ b/css/main.css
@@ -59,7 +59,7 @@
     .menu-branding .portrait {
       width: 250px;
       height: 250px;
-      background: url("/dist/img/portrait.jpg");
+      background: url("../img/portrait.jpg");
       border-radius: 50%;
       border: solid 3px #76949d; }
   .menu .nav-item {
@@ -158,11 +158,16 @@ header {
   transition: all 0.3s ease-out;
   transform: rotate(180deg); }
 
+#beyond-top {
+  background: red;
+  top: -100px;
+  position: relative; }
+
 main {
   background: rgba(31, 31, 36, 0.86);
   padding: 4rem;
-  padding-left: 6rem;
-  height: 100%;
+  padding-top: 25vh;
+  padding-left: 8rem;
   min-height: calc(100vh - 60px); }
   main .landing {
     height: 100vh; }
@@ -175,9 +180,14 @@ main {
         transition: all 0.3s ease-out; }
   main#home {
     overflow: hidden;
-    height: 100vh; }
+    height: 120vh;
+    top: -20vh;
+    margin-bottom: -20vh;
+    position: relative; }
     main#home h1 {
       margin-top: 20vh; }
+  main .mobile-line-break {
+    display: none; }
 
 .background-image {
   position: absolute;
@@ -199,6 +209,7 @@ main {
   margin-bottom: 0; }
 
 #home-about {
+  overflow: hidden;
   height: 100vh;
   width: 100vw;
   display: flex;
@@ -240,6 +251,7 @@ main {
         height: auto; }
 
 #home-work {
+  overflow: hidden;
   height: 100vh;
   width: 100vw;
   background: #1f1f24;
@@ -275,6 +287,7 @@ main {
     background: #76949d; }
 
 #home-contact {
+  overflow: hidden;
   height: 100vh;
   width: 100vw;
   display: flex;
@@ -284,7 +297,6 @@ main {
   color: #1f1f24; }
   #home-contact .boxes {
     display: flex;
-    flex-wrap: wrap;
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
@@ -306,15 +318,14 @@ main {
       transition: all 0.3s ease-out; }
 
 #about {
-  padding: 4rem; }
+  padding: 4rem 6rem; }
   #about h2 {
     background: rgba(0, 0, 0, 0); }
   #about .bio {
     display: grid;
     grid-gap: 30px;
     grid-template-columns: repeat(3, 1fr);
-    margin-right: 40px;
-    margin-bottom: 40px; }
+    margin: 5vw 10vw; }
     #about .bio :nth-child(2) {
       grid-column: 2 / 4; }
     #about .bio :nth-child(3) {
@@ -338,6 +349,8 @@ main {
     #about .bio .bio-img-camera {
       height: 420px;
       width: 329px; }
+    #about .bio .imdb-link {
+      color: #55d9fa; }
     #about .bio .imdb-link:hover {
       text-decoration: underline; }
 
@@ -355,7 +368,7 @@ main {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 2rem;
-    margin: 0rem 2rem; }
+    margin: 0rem 4rem; }
     #my-work .projects .item {
       max-width: 500px; }
       #my-work .projects .item img {
@@ -592,6 +605,8 @@ main {
             min-width: 300px;
             height: auto;
             overflow: scroll; }
+          .vr-project .project-info-container .project-info .project-info-block .project-info-text-container a {
+            color: #55d9fa; }
 
 #video-production {
   padding: 4rem; }
@@ -743,13 +758,18 @@ main {
     grid-template-areas: "bioimage" "bio" "job1" "job2" "job3";
     grid-template-columns: 1fr; }
   #about h1 {
-    font-size: 4rem; }
+    font-size: 4rem;
+    text-align: center; }
+  #about h2 {
+    text-align: center; }
   #about .bio {
     margin: 1rem;
     display: flex;
     flex-direction: column; }
-    #about .bio :nth-child(2n + 2) {
-      order: 1; }
+    #about .bio :nth-child(-n+2) {
+      order: -2; }
+    #about .bio :nth-child(4) {
+      order: -1; }
     #about .bio .bio-img {
       margin-top: 1rem; }
       #about .bio .bio-img .bio-img-baby-shades {
@@ -801,13 +821,14 @@ main {
 @media screen and (max-width: 500px) {
   main#home {
     padding: 3rem;
+    padding-top: 1rem;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     font-weight: 100; }
     main#home h1 {
-      margin-top: 0;
+      margin-top: 10rem;
       font-size: 4rem;
       font-weight: 100; }
     main#home h2 {
@@ -816,27 +837,28 @@ main {
       font-weight: 100; }
     main#home .icons {
       font-size: 1.1rem; }
+    main#home .mobile-line-break {
+      display: inline; }
   #home-about {
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center; }
     #home-about h2 {
-      padding-top: 1rem;
+      padding-top: 2rem;
       padding-bottom: 0.5rem;
       font-weight: 100; }
     #home-about #home-about-content {
       flex-direction: column;
       justify-content: flex-start;
-      margin: 0;
+      margin: 0rem 0;
       width: 100vw; }
       #home-about #home-about-content #home-about-text {
-        height: auto;
-        width: 90vw;
+        width: 80vw;
         margin: 0;
         margin-top: 1rem; }
         #home-about #home-about-content #home-about-text p {
-          margin: 0;
+          margin: 1rem 0rem;
           padding: 1rem;
-          padding-bottom: 0;
+          padding-bottom: 0rem;
           font-size: .8rem;
           overflow: scroll;
           width: 100%; }
@@ -917,6 +939,7 @@ main {
       #my-work .project-section-title hr {
         margin-bottom: 0; }
     #my-work .projects {
+      margin: 1rem;
       grid-template-columns: 1fr; }
       #my-work .projects .item a {
         font-size: 1rem; }
@@ -996,6 +1019,80 @@ main {
     width: 90%; }
   .playlist-timeline-wrapper {
     height: 263px; } }
+
+@media screen and (max-width: 700px) and (orientation: landscape) {
+  main#home {
+    padding: 3rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-weight: 100; }
+    main#home h1 {
+      margin-top: 0;
+      font-size: 4rem;
+      font-weight: 100; }
+    main#home h2 {
+      padding: 0;
+      font-size: 1.5rem;
+      font-weight: 100; }
+    main#home .icons {
+      font-size: 1.1rem; }
+  #home-about {
+    justify-content: flex-start;
+    align-items: center; }
+    #home-about h2 {
+      padding-top: 2rem;
+      padding-bottom: 0.5rem;
+      font-weight: 100; }
+    #home-about #home-about-content {
+      flex-direction: column;
+      justify-content: flex-start;
+      margin: 0rem 0;
+      width: 100vw; }
+      #home-about #home-about-content #home-about-text {
+        width: 40vw;
+        margin: 0;
+        margin-top: 1rem; }
+        #home-about #home-about-content #home-about-text p {
+          margin: 1rem 0rem;
+          padding: 1rem;
+          padding-bottom: 0rem;
+          font-size: .8rem;
+          overflow: scroll;
+          width: 100%; }
+      #home-about #home-about-content #home-about-img-wrapper {
+        margin-top: 1rem;
+        height: 210px;
+        width: 164px;
+        padding-bottom: 3rem;
+        min-width: 280px; }
+  #home-work #home-section-title-work {
+    margin-top: 3rem;
+    margin-bottom: 0rem;
+    font-weight: 100;
+    padding: 0; }
+  #home-work .glider {
+    margin: 0; }
+  #home-work .glider-prev {
+    margin-right: 0;
+    width: 50px;
+    height: 50px;
+    visibility: hidden; }
+    #home-work .glider-prev i {
+      float: left; }
+  #home-work .glider-next {
+    width: 50px;
+    height: 50px;
+    visibility: hidden; }
+    #home-work .glider-next i {
+      float: right; }
+  #home-contact .boxes {
+    margin-top: 0; }
+    #home-contact .boxes div {
+      font-size: 1.25rem;
+      padding: 1rem;
+      margin-bottom: 1rem; } }
 
 ::-webkit-scrollbar {
   width: 0px;
