--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -31,6 +31,10 @@
     height: 18vh;
     // background: red;
   }
+  .background-image {
+    background: url(../img/portfolio-home-mobile.jpg);
+    background-size: cover;
+  }
   .menu-btn {
     top: 35px;
     right: 35px;
@@ -333,6 +337,7 @@
     #home-about-content {
       flex-direction: column;
       justify-content: flex-start;
+      flex-wrap: nowrap;
       margin: 0rem 0;
       width: 100vw;
       #home-about-text {
@@ -341,7 +346,7 @@
         margin: 0;
         margin-top: 1rem;
         p {
-          margin:1rem 0rem;
+          margin:.5rem 0rem;
           padding: 1rem;
           padding-bottom: 0rem;
           font-size: .8rem;
